Chapter 13 - Creating a Game Manager

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,10 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\SoyBoyController.cs" />
     <Compile Include="Assets\Scripts\CameraLerpToTransform.cs" />
+    <Compile Include="Assets\Scripts\RotationScript.cs" />
+    <Compile Include="Assets\Scripts\Hazard.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Goal.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
